<resources>
    <string name="app_name">Google Certification Kotlin 2020</string>

    <string name="title_android_core">Android core</string>
    <string name="title_user_interface">User interface</string>
    <string name="title_data_management">Data management</string>
    <string name="title_debugging">Debugging</string>
    <string name="title_testing">Testing</string>

    <string name="toasts_overview">Toasts overview</string>
    <string name="toasts_the_basics">The Basics</string>
    <string name="toasts_positioning_your_toast">Positioning your Toast</string>
    <string name="toasts_creating_custom_toast">Creating a Custom Toast View</string>

    <string name="snackbar">Snackbar</string>
    <string name="snackbar_make">Make a Snackbar</string>
    <string name="snackbar_make_length_indefinite">Make Length Indefinite Snackbar</string>
    <string name="snackbar_make_action_text_color">Make Action Text Color Snackbar</string>
    <string name="snackbar_make_colorful">Make Colorful Snackbar</string>
    <string name="snackbar_make_tint_and_background_colorful">Make Tint and Background Colorful Snackbar</string>

</resources>